# Lazynext

./: .dockerignore  .env.docker  .env.example  .env.production.example  .eslintrc.json  .gcloudignore  .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  .pre-commit-config.yaml  .prettierignore  .tokeignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  Dockerfile  Dockerfile.api  Dockerfile.mcp  Dockerfile.migrate  Dockerfile.render  Dockerfile.rust-builder  Dockerfile.sync  Dockerfile.web  IMPLEMENTATION_PLAN_FCPXML_AI_SKILLS.md  Jenkinsfile  Jenkinsfile.nightly  LAZYNEXT_COMPLETE_BLUEPRINT_V9.md  Lazynext.rtf  PLATFORM_ASSESSMENT.md  README.md  VERSION  biome.json  blueprint.mastery.md  build-wasm.sh  build_logs.json  (+55 more)
.archive/: .gitlab-ci.yml  Jenkinsfile  docker-compose.ci.yml  docker-compose.gpu.yml  docker-compose.ingress.yml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  gitleaks.toml  labeler.yml  pull_request_template.md
.next/: trace  trace-build
.opencode/: opencode.json
Mastery_Docs/: agent-work-log.md  mastery-compact.md  mastery.md
ansible/: .gitignore  README.md  ansible.cfg  inventory.ini  playbook.yml  requirements.yml  site.yml
app/: apple-icon.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
apps/: README.md
apps/api-gateway/: Cargo.toml
apps/api-gateway/src/: main.rs
apps/cli/: Cargo.toml  README.md  package.json  project.json  test_wgpu.rs
apps/cli/src/: index.ts  main.rs
apps/desktop/: Cargo.toml  README.md  entitlements.plist
apps/desktop/locales/: es.yml  fr.yml  ko.yml  pl.yml  th.yml  tr.yml
apps/desktop/script/: setup-linux.sh  setup-windows.ps1
apps/desktop/scripts/: codesign.sh
apps/desktop/src/: auth.rs  captcha.rs  dashboard.rs  editor.rs  i18n_utils.rs  main.rs  publish_modal.rs  theme.rs
apps/desktop/src/panes/: promotions.rs
apps/mcp/: Cargo.toml
apps/mcp/src/: main.rs
config/: README.md
database/: README.md
rust/api-gateway/: Cargo.toml  Dockerfile  README.md
rust/api-gateway/locales/: de.yml  es.yml  fr.yml  hi.yml  id.yml  ko.yml  ru.yml  th.yml  zh.yml
rust/api-gateway/src/: captcha.rs  csrf.rs  db.rs  international.rs  main.rs  ratelimit.rs  rbac.rs  ws.rs
rust/api-gateway/tests/: integration_test.rs
rust/cli/: Cargo.toml  README.md
rust/cli/locales/: ar.yml  es.yml  fr.yml  hi.yml  it.yml  ja.yml  nl.yml  pt.yml  vi.yml
rust/cli/src/: main.rs
rust/cli/tests/: e2e_pipeline.rs  help.rs  pipeline.rs
rust/core/: Cargo.toml  README.md  build.rs  uniffi-bindgen.rs
rust/core/src/: ai_client.rs  auto_memory.rs  autonomous.rs  autonomous_agent.rs  big_bang.rs  channels.rs  claude_features.rs  copilot_tools.rs  engine.rs  ffmpeg_loader.rs  frame_cache.rs  lib.rs  mobile_bridge.rs  nle_state.rs  plugin_manager.rs  ring_buffer_decoder.rs  scheduled_routines.rs  session_portability.rs  singularity.rs  task_queue.rs  time_util.rs
rust/core/src/timeline/: mod.rs  models.rs
rust/core/src/timeline/placement/: apply.rs  compatibility.rs  insert_index.rs  main_track.rs  mod.rs  overlap.rs  resolve.rs  track_factory.rs  types.rs
rust/core/tests/: autonomous_tests.rs  crdt_sync.rs  orchestrator_crdt_roundtrip.rs  undo_recording.rs  video_decode.rs
rust/core/uniffi/: lazynext.udl
rust/crates/audio/: Cargo.toml
rust/crates/audio/src/: compressor.rs  eq.rs  fft.rs  lib.rs  mixer.rs  playback.rs  spatial.rs  sync.rs  vst.rs
rust/crates/decklink/: Cargo.toml  build.rs
rust/crates/decklink/src/: decklink_api.cc  decklink_api.h  lib.rs
rust/crates/editor_core/: Cargo.toml  README.md
rust/crates/editor_core/src/: color_grading.rs  lib.rs  models.rs  processing.rs  timeline.rs
rust/crates/effects/: Cargo.toml
rust/crates/effects/src/: effects.rs  film_emulation.wgsl  film_physics.rs  lib.rs  optical_flow.rs  pipeline.rs  types.rs
rust/crates/effects/src/shaders/: chroma_key.wgsl  color_grade.wgsl  crt.wgsl  fire.wgsl  gaussian_blur.wgsl  glitch.wgsl  glow.wgsl  lut_3d.wgsl  portal.wgsl  vhs.wgsl  vignette.wgsl
rust/crates/export/: Cargo.toml
rust/crates/export/src/: aaf.rs  dcp.rs  encoder.rs  lib.rs  mp4.rs  pipeline.rs  prores.rs
rust/crates/export/tests/: export_pipeline.rs
rust/crates/fcpxml/: Cargo.toml
rust/crates/fcpxml/src/: lib.rs  serializer.rs  types.rs
rust/crates/masks/: Cargo.toml
rust/crates/masks/src/: feather.rs  masks.rs  sam2.rs  sdf.rs
rust/crates/masks/src/shaders/: jfa_distance.wgsl  jfa_init.wgsl  jfa_step.wgsl
rust/crates/masks/tests/: sam2.rs
rust/crates/neural_engine/: Cargo.toml  README.md
rust/crates/neural_engine/src/: compute.wgsl  generative.rs  lib.rs
rust/crates/plugin/: Cargo.toml
rust/crates/plugin/src/: lib.rs  wasm_sandbox.rs
rust/crates/rules/: Cargo.toml
rust/crates/rules/src/: lib.rs
rust/mcp-server/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust/mcp-server/src/: auth.rs  main.rs
rust/mcp-server/tests/: protocol.rs
rust/p2p-sync/: Cargo.toml  README.md
rust/p2p-sync/src/: lib.rs  libp2p_mesh.rs
rust/provenance/: Cargo.toml  README.md
rust/provenance/src/: c2pa.rs  lib.rs
rust/temporal-versioning/: Cargo.toml  README.md
rust/temporal-versioning/src/: lib.rs
rust/temporal-versioning/tests/: merge.rs
rust/tests/: Cargo.toml  e2e_integration_tests.rs
rust/tests/src/: lib.rs
rust/wasm/: Cargo.toml  README.md
rust/wasm/.cargo/: config.toml
rust/wasm/pkg/: .gitignore  lazynext_wasm.d.ts  lazynext_wasm.js  lazynext_wasm_bg.wasm.d.ts  package.json
rust/wasm/src/: animation_wasm.rs  audio_wasm.rs  compositor.rs  crdt_bridge.rs  crdt_wasm.rs  effects.rs  engine_wasm.rs  export_wasm.rs  gpu.rs  masks.rs  neural.rs  perf.rs  plugin.rs  proxy.rs  state.rs  timeline_wasm.rs  wasm.rs  webcodecs.rs
services/collab-server/: Cargo.toml  Dockerfile  README.md  package.json
services/collab-server/src/: db.rs  lib.rs  main.rs
services/collab-server/tests/: integration_test.rs
(+2928 files in other folders)
