[workspace]
resolver = "2"
members = [
    "rust/crates/*",
    "rust/core",
    "rust/p2p-sync",
    "rust/plugin-api",
    "rust/provenance",
    "rust/temporal-versioning",
    "rust/wasm",
    "rust/mcp-server",
    "rust/api-gateway",
    "rust/cli",
    "apps/desktop",
    "services/collab-server"
]

[patch.crates-io]
http-types = { path = "rust/vendor/http-types-2.12.0" }
taffy = { path = "rust/vendor/taffy-0.9.0" }
