[package]
name = "lazynext_api_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
lazynext_core = { path = "../../rust/core" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
