[package]
name = "lazynext_desktop"
version = "0.1.0"
edition = "2024"
description = "Lazynext native desktop editor — wgpu-accelerated video compositing"

[dependencies]
lazynext_core = { path = "../../rust/core" }
gpu = { path = "../../rust/crates/gpu" }
compositor = { path = "../../rust/crates/compositor" }
tokio = { version = "1.0", features = ["full"] }
winit = "0.30"
wgpu = "23.0"
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
pollster = "0.3"
