[package]
name = "lazynext_desktop"
version = "0.1.0"
edition = "2024"
description = "Lazynext native desktop editor — wgpu-accelerated video compositing"

[dependencies]
lazynext_core = { path = "../../rust/core" }
gpu = { path = "../../rust/crates/gpu" }
compositor = { path = "../../rust/crates/compositor" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
gpui = "0.2.2"
image = "0.25"
rfd = "0.17.2"
uuid = { version = "1.23.4", features = ["v4"] }
