[package]
name = "lazynext_desktop"
version = "0.1.0"
edition = "2024"
description = "Lazynext native desktop editor — wgpu-accelerated video compositing"

[dependencies]
lazynext_core = { path = "../../rust/core" }
lazynext-export = { path = "../../rust/crates/export" }
gpu = { path = "../../rust/crates/gpu" }
compositor = { path = "../../rust/crates/compositor" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
axum = "0.8"
webbrowser = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
gpui = "0.2.2"
image = "0.25"
rfd = "0.17.2"
uuid = { version = "1.23.4", features = ["v4"] }
sha2 = "0.11"
rust-i18n = "4.2.1"
sys-locale = "0.3.2"
