[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
time = { path = "../../rust/crates/time" }
compositor = { path = "../../rust/crates/compositor" }
state = { path = "../../rust/crates/state" }
agent = { version = "0.1.0", path = "../../rust/crates/agent" }
