[package]
name = "lazynext_api_gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
lazynext_core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
neural_engine = { path = "../crates/neural_engine" }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls-ring", "chrono", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10"
base64 = "0.22"
