[package]
name = "lazynext_api_gateway"
description = "Axum REST gateway with JWT auth, RBAC, rate limiting, WebSocket sync, and OpenAPI docs"
version = "0.1.0"
edition = "2024"

[dependencies]
lazynext_core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
neural_engine = { path = "../crates/neural_engine" }
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls-ring", "chrono", "uuid"] }
dotenvy = "0.15"
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
base64 = "0.22"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
futures = "0.3.32"
redis = { version = "0.25", features = ["tokio-comp"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.7.0", features = ["trace"] }
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["reqwest-client", "http-proto"] }
tracing-opentelemetry = "0.33.0"
promotions = { version = "0.1.0", path = "../crates/promotions" }
rust-i18n = "4.2.1"
sys-locale = "0.3.2"
axum-macros = "0.5.1"
lazynext_international = { version = "0.1.0", path = "../crates/international" }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
lazynext-export = { path = "../crates/export" }
