[package]
name = "lazynext_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
lazynext_core = { path = "../core" }
lazynext-export = { path = "../crates/export" }
image = "0.24"
indicatif = "0.18.4"
serde_json = "1.0.150"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
