[package]
name = "lazynext_cli"
description = "Headless CLI renderer and automation tool for Lazynext NLE"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
lazynext_core = { path = "../core" }
lazynext_rules = { path = "../crates/rules" }
lazynext-export = { path = "../crates/export" }
image = "0.25"
indicatif = "0.18.4"
serde_json = "1.0.150"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.13.4", features = ["json"] }
rust-i18n = "4.2.1"
sys-locale = "0.3.2"
