[package]
name = "lazynext_core"
version = "0.1.0"
edition = "2024"

[dependencies]
lazynext_plugin_api = { path = "../plugin-api" }
lazynext_provenance = { path = "../provenance" }
state = { path = "../crates/state" }
tokio = { version = "1.0", features = ["sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
