[package]
name = "lazynext_core"
version = "0.1.0"
edition = "2024"
description = "The ultra-fast rust compositor and CRDT synchronization engine for Lazynext."
repository = "https://github.com/lazynext/lazynext"
license = "MIT"

[dependencies]
lazynext_plugin_api = { path = "../plugin-api" }
lazynext_provenance = { path = "../provenance" }
lazynext-export = { path = "../crates/export" }
state = { path = "../crates/state" }
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
gpu = { path = "../crates/gpu" }
compositor = { path = "../crates/compositor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
