[package]
name = "lazynext_core"
version = "0.1.0"
edition = "2024"
description = "The ultra-fast rust compositor and CRDT synchronization engine for Lazynext."
repository = "https://github.com/lazynext/lazynext"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ffmpeg-next = { version = "8.1.0", optional = true }
lazynext-export = { path = "../crates/export" }
uniffi = { version = "0.32.0", features = ["cli"] }
decklink = { path = "../crates/decklink" }

[features]
default = []
native-ffmpeg = ["dep:ffmpeg-next"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = []

[dependencies]
lazynext_plugin_api = { path = "../plugin-api" }
lazynext_provenance = { path = "../provenance" }
state = { path = "../crates/state" }
audio = { path = "../crates/audio" }
tokio = { version = "1.0", features = ["sync", "time", "rt"] }
gpu = { path = "../crates/gpu" }
compositor = { path = "../crates/compositor" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1.0", features = ["v4", "js"] }
once_cell = "1.21.4"
lru = "0.18.0"
thiserror = "2"

[build-dependencies]
uniffi_build = "0.31.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.gpu]
path = "../crates/gpu"
features = ["wasm"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document"] }
console_error_panic_hook = "0.1"
