[package]
name = "lazynext_mcp_server"
version = "0.1.0"
edition = "2024"

[dependencies]
lazynext_core = { path = "../core" }
lazynext-export = { path = "../crates/export" }
editor_core = { path = "../crates/editor_core" }
state = { path = "../crates/state" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
