[package]
name = "lazynext_p2p_sync"
version = "0.1.0"
edition = "2024"

[dependencies]
lazynext_core = { path = "../core" }
state = { path = "../crates/state" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
