[package]
name = "lazynext_provenance"
description = "Media provenance: C2PA 2.1 content authentication, cryptographic fingerprinting, and chain-of-custody"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.11"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.13"
