[package]
name = "lazynext_temporal_versioning"
version = "0.1.0"
edition = "2024"

[dependencies]
lazynext_core = { path = "../core" }
state = { path = "../crates/state" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
