[package]
name = "lazynext-wasm"
version = "0.2.10"
edition = "2024"
description = "Shared video editor logic compiled to WebAssembly"
repository = "https://github.com/Lazynext-Corporation/lazynext"
license = "MIT"

[lib]
path = "src/wasm.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bridge = { version = "0.1.0", path = "../crates/bridge" }
compositor = { version = "0.1.0", path = "../crates/compositor" }
console_error_panic_hook = "0.1.7"
effects = { version = "0.1.0", path = "../crates/effects" }
gpu = { version = "0.1.0", path = "../crates/gpu", features = ["wasm"] }
js-sys = "0.3.93"
masks = { version = "0.1.0", path = "../crates/masks" }
plugin = { version = "0.1.0", path = "../crates/plugin" }
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
serde-wasm-bindgen = "0.6.5"
state = { version = "0.1.0", path = "../crates/state", features = ["wasm"] }
time = { version = "0.1.0", path = "../crates/time", features = ["wasm"] }
editor_core = { path = "../crates/editor_core" }
neural_engine = { version = "0.1.0", path = "../crates/neural_engine" }
audio = { version = "0.1.0", path = "../crates/audio" }
wasm-bindgen = "0.2.116"
wasm-bindgen-futures = "0.4.66"
web-sys = { version = "0.3.93", features = ["OffscreenCanvas", "HtmlCanvasElement", "CanvasRenderingContext2d", "OffscreenCanvasRenderingContext2d", "Document", "Window", "Performance", "TextMetrics"] }

[features]
default = ["wasm"]
wasm = []
