[package]
name = "collab-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
jsonwebtoken = "10"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "json", "macros"] }
dotenvy = "0.15"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["reqwest-client", "http-proto"] }
tracing-opentelemetry = "0.33.0"
