[package]
name = "collab-server"
description = "WebSocket collaboration server: JWT rooms, CRDT broadcasting, WebRTC signaling"
version = "0.1.0"
edition = "2021"

[lib]
name = "collab_server"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "json", "macros"] }
dotenvy = "0.15"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["reqwest-client", "http-proto"] }
tracing-opentelemetry = "0.33.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.30", features = ["connect"] }
futures-util = "0.3"
serde_json = "1.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
axum = { version = "0.8.1", features = ["ws"] }
