[package]
name = "audio"
description = "DSP engine: EQ, compressor, VST3 host, FFT analysis, spatial audio, and timeline sync"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { path = "../time" }
anyhow = "1.0"

# DSP dependencies
rustfft = "6.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
rodio = { version = "0.22.2", default-features = false, features = ["wasm-bindgen"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rodio = "0.19.0"
libloading = "0.9"
