[package]
name = "decklink"
version = "0.1.0"
edition = "2024"
description = "Blackmagic DeckLink SDI/HDMI I/O for broadcast monitoring"

[features]
default = []
decklink-sdk = ["cxx"]

[dependencies]
cxx = { version = "1.0", optional = true }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }
