[package]
name = "editor_core"
description = "Editor core: WASM-exported CRDT timeline, color grading, silence detection, and processing pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.116"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
state = { path = "../state" }
