[package]
name = "effects"
description = "11 GPU effect shaders: film physics, optical flow, grain, vignette, and pipeline orchestrator"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/effects.rs"
crate-type = ["rlib"]

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
gpu = { version = "0.1.0", path = "../gpu" }
thiserror = "2.0.18"
wgpu = "29.0.1"
