[package]
name = "lazynext-export"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
hex = "0.4"
state = { path = "../state" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["process", "io-util"] }
