[package]
name = "neural_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
image = "0.24.7"

serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# ONNX Runtime — uncomment when model files are available
# ort = { version = "2.0", features = ["load-dynamic"] }
# tract-onnx = "0.21"
wgpu = "22.0" # Matches workspace version (or we will rely on workspace version)

[features]
default = []
onnx = []
