[package]
name = "neural_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.17"
serde = { version = "1.0", features = ["derive"] }
image = "0.25"

serde_json = "1.0"
reqwest = { version = "0.13", features = ["json"] }
wgpu = "30.0.0"
bytemuck = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
onnx = ["dep:ort"]

[dependencies.ort]
version = "2.0.0-rc.12"
optional = true
