[package]
name = "lazynext_rules"
description = "Markdown/YAML rule engine: glob-scoped rules with YAML frontmatter for AI copilot guidance"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
glob = "0.3"

[dev-dependencies]
tempfile = "3.20"
